# muted

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: ubuntu-cmake.yml
lib/: BashCodeExecutor.h  OSTypeProvider.h  TrayIcon.h
lib/microphone/: MicrophoneController.h  MicrophoneStateProvider.h
lib/microphone/AMixer/: AMixerMicrophoneController.cpp  AMixerMicrophoneController.h  AMixerMicrophoneStateProvider.cpp
lib/tray/: CrossPlatformTrayIcon.h
src/: CMakeLists.txt  main.cpp  tray_icon.cpp  tray_icon.h
src/lib/: BashCodeExecutor.h  CodeExecutor.h
src/lib/microphone/: MicrophoneController.h  MicrophoneStateProvider.h
src/lib/microphone/AMixer/: AMixerMicrophoneController.cpp  AMixerMicrophoneController.h  AMixerMicrophoneStateProvider.h
src/lib/tray/: CrossPlatformTrayIcon.h  CrossPlatformTrayIconProvider.h  TrayIcon.h  TrayIconProvider.h
test/: CMakeLists.txt  test_main.cpp  trompeloeil_catch.hpp  tst_AMixerMicrophoneController.cpp  tst_BashCodeExecutor.cpp  tst_OSTypeProvider.cpp  tst_TrayIcon.cpp  tst_TrayIconMenuContext.cpp  tst_tray_icon.cpp
